config/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: greentrail-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/use-regex: "true"   # дозвіл на regex у шляхах
#spec:
#  rules:
#    - host: localhost  # або залиш, або зроби пустим, якщо локально
#      http:
#        paths:
#          - path: /gateway-service(/|$)(.*)
#            pathType: ImplementationSpecific  # regex працює з ImplementationSpecific
#            backend:
#              service:
#                name: gateway-service
#                port:
#                  number: 8082
#          - path: /auth-service(/|$)(.*)
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: auth-service
#                port:
#                  number: 8088



#
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: greentrail-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#    - http:
#        paths:
#          - pathType: Prefix
#            path: /api-gateway
#            backend:
#              service:
#                name: api-gateway
#                port:
#                  number: 8082


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greentrail-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /auth-service
            backend:
              service:
                name: auth-service
                port:
                  number: 8088
          - pathType: Prefix
            path: /api-gateway
            backend:
              service:
                name: api-gateway
                port:
                  number: 8082
          - pathType: Prefix
            path: /user-service
            backend:
              service:
                name: user-service
                port:
                  number: 8085
          - pathType: Prefix
            path: /trek-service
            backend:
              service:
                name: trek-service
                port:
                  number: 8081
          - pathType: Prefix
            path: /media-service
            backend:
              service:
                name: media-service
                port:
                  number: 8086
          - pathType: Prefix
            path: /chat-service
            backend:
              service:
                name: chat-service
                port:
                  number: 8087
